<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="42dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/Placeholde_Essteleague_logo"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/essteling_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_essteling" />

            <TextView
                android:id="@+id/Essteleague_story"
                android:layout_width="0dp"
                android:layout_height="88dp"
                android:layout_marginTop="24dp"
                android:text="@string/esstelleague_uitnodiging_bericht"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Placeholde_Essteleague_logo" />

            <Button
                android:id="@+id/Play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/play"
                app:layout_constraintBottom_toBottomOf="@+id/Play_image"
                app:layout_constraintEnd_toEndOf="@+id/Play_image"
                app:layout_constraintStart_toStartOf="@+id/Play_image" />

            <TextView
                android:id="@+id/informatie_over_Essteleague"
                android:layout_width="279dp"
                android:layout_height="143dp"
                android:layout_marginTop="20dp"
                android:text="@string/neem_controle_over_1_van_onze_sprookjes_auto_s_en_bepaal_hoe_het_verhaal_zich_verder_afspeel_in_dit_interactieve_autospel"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Play_button" />

            <ImageView
                android:id="@+id/Essteling_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="126dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="105dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/informatie_over_Essteleague"
                app:srcCompat="@drawable/iv_essteling_logo_transparant" />

            <ImageView
                android:id="@+id/Play_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="2:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Essteleague_story"
                app:srcCompat="@drawable/play_essteling" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>